2004-09-26  root  <root@gills.dancysoft.com>

	* version.cl: 1.1.21:

	* greylist.cl: Allow for *@domain.com style entries in optin and
	optout tables.

2004-09-13  Ahmon Dancy  <dancy@dancy>

	* version.cl: 1.1.20
	 
	* Conditionalize tests in process-dead-p for 7.0

2004-09-06  root  <root@gills.dancysoft.com>

	* version.cl: 1.1.19

	* If a fully qualiified left hand side is specified in the aliases
	file, then the associated owner- alias (if there is one) must be
	fully qualified as well.

	* smtp-server.cl: Rudimentary EHLO support.  May add STARTTLS
	soon.

2004-08-16  root  <root@gills.dancysoft.com>

        * version.cl: 1.1.18
	
	* bounce.cl: Fix problem when generating bounce message when the
	recipient was a program.

2004-07-21  Ahmon Dancy  <dancy@dancy>

	* version.cl: 1.1.17

	* greylist.cl:  greylist-whitelisted-sender-p:  Add special case
	for null sender.

2004-07-14  Ahmon Dancy  <dancy@dancy>

	* version.cl: 1.1.16

	* greylist.cl/sql:  Made the whitelist database more flexible.
	receiver column can be '*' to indicate a global whitelist.  sender
	column can be '*@domain' to whitelist an entire domain.  

	---
	greyadmin/

  	* greyadmin.cl/menu.clp: Added ability for users to manage their
	own whitelist entries.

2004-07-08  Ahmon Dancy  <dancy@dancy>

	* greylist.cl [updated]: Print ip address properly when logging
	manually whitelisted senders.

	* version.cl: 1.1.15

	* greylist.cl: If a particular sender address is in the
	'whitelist' table of the greylist database, excuse from
	greylisting.  This feature should be used with care since it is
	trivial for spammers to forge sender addresses.  If you are
	upgrading from a prior version, you'll need to create the
	whitelist table and index.  See greylist.sql for the two sql
	statements.

	* greylist.sql: Updated to include creation of the whitelist table
	and index.

2004-01-12  Ahmon Dancy  <dancy@dancy>

	* version.cl: 1.1.14
