@@ -1,0 +1,4 @@
+(setf *domain* "foo.com")
+(setq *greylist-db-user* "greylist")
+(setf *greylist-db-password* "...change me....") ;; see maild-greylist.cl
+(setf *run-as* "root")
