@@ -1,11 +1,11 @@
-# $Id: Makefile,v 1.2 2003/07/24 03:02:14 dancy Exp $
+# $Id: Makefile,v 1.3 2004/11/10 15:51:53 layer Exp $
 
 lisp=$(shell    if test -x /fi/cl/6.2/acl/osname.sh; then \
 			echo /fi/cl/6.2/bin/`/fi/cl/6.2/acl/osname.sh`/mlisp; \
 		elif test -x /storage1/acl/mlisp; then \
 			echo /storage1/acl/mlisp; \
 		else \
-			echo /backup/acl/acl62/mlisp; \
+			echo /backup/acl/acl70/mlisp; \
 		fi)
 libdir=/usr/local/lib
 bindir=/usr/local/sbin
@@ -19,13 +19,13 @@ greyadmin/greyadmin: greyadmin.cl
 install: install-greyadmin
 
 install-common:
-	mkdir -p $(libdir) $(bindir)
+	mkdir -p $(DESTDIR)$(libdir) $(DESTDIR)$(bindir)
 
 install-greyadmin: greyadmin/greyadmin install-common
-	rm -fr $(libdir)/greyadmin
-	cp -pr greyadmin $(libdir)
-	cp -p *.clp $(libdir)/greyadmin/
-	ln -sf $(libdir)/greyadmin/greyadmin $(bindir)/greyadmin
+	rm -fr $(DESTDIR)$(libdir)/greyadmin
+	cp -pr greyadmin $(DESTDIR)$(libdir)
+	cp -p *.clp $(DESTDIR)$(libdir)/greyadmin/
+	ln -sf ../lib/greyadmin/greyadmin $(DESTDIR)$(bindir)/greyadmin
 
 clean:
 	rm -f *.fasl
