@@ -14,26 +14,29 @@
 ;; Commercial Software developed at private expense as specified in
 ;; DOD FAR Supplement 52.227-7013 (c) (1) (ii), as applicable.
 ;;
-;; $Id: log.cl,v 1.5 2004/01/12 22:48:59 dancy Exp $
+;; $Id: log.cl,v 1.6 2004/11/10 15:51:53 layer Exp $
 
 (in-package :user)
 
 (defparameter *log-opened* nil)
 
 (defun maild-log (&rest args)
-  (if* (null *log-opened*)
-     then
-	  (openlog "maild"
-		   (logior *log-pid* (if *debug* *log-perror* 0))
-		   *log-mail*)
-	  (setf *log-opened* t))
-  (syslog (logior *log-mail* *log-info*) 
-	  "~?"
-	  (first args) (rest args)))
+  (when (null *log-opened*)
+    (openlog "maild" (logior *log-pid* (if *debug* *log-perror* 0)) *log-mail*)
+    (setf *log-opened* t))
+  
+  (if* (first args)
+     then (syslog (logior *log-mail* *log-info*) "~?" (first args) (rest args))
+     else ;; Just in case someone calls maild-log instead of
+	  ;; maild-log-and-print:
+	  (syslog (logior *log-mail* *log-info*) "BUG: maild-log: args=~s"
+		  args)))
 
 (defun maild-log-and-print (verbose &rest args)
   (when verbose
-    (format t "~?" (first args) (rest args))
-    (write-char #\newline)
-    (force-output))
+    (if* (first args)
+       then (format t "~?" (first args) (rest args))
+	    (write-char #\newline)
+	    (force-output)
+       else (maild-log "BUG: maild-log-and-print: args=~s" args)))
   (apply #'maild-log args))
